--- a/config.env
+++ b/config.env
@@ -1,8 +1,8 @@
 # REQUIRED CONFIG
-TELEGRAM_API_HASH = ""                                # Require restart after changing it while bot running
-TELEGRAM_API_ID = ""                                  # Require restart after changing it while bot running
-BOT_TOKEN = ""                                        # Require restart after changing it while bot running
-OWNER_ID = ""                                         # Require restart after changing it while bot running
+TELEGRAM_API_HASH = "dae27342bc2f0686f8c8322e5a82f2cf"                                # Require restart after changing it while bot running
+TELEGRAM_API_ID = "15138526"                                  # Require restart after changing it while bot running
+BOT_TOKEN = "6240422551:AAGxpagJMaRlte1m6Hudij0V32yIVh3MIE4""                                        # Require restart after changing it while bot running
+OWNER_ID = "5450390092"       
 # OPTIONAL CONFIG
 GDRIVE_FOLDER_ID = ""
 IS_TEAM_DRIVE = ""
@@ -24,7 +24,7 @@ BASE_URL = ""
 SERVER_PORT = "" 
 # GOOGLE DRIVE INDEX
 GD_INDEX_URL = ""
-VIEW_LINK = ""
+VIEW_LINK = "true"
 # RCLONE
 DEFAULT_OWNER_REMOTE= ""
 DEFAULT_GLOBAL_REMOTE= ""
